<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flocktamer.fragments.ConfirmPhoneFragment">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_confirmcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter Code"
            android:paddingTop="4dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/enter_codebox"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="@dimen/dimen_10dp"
                android:textColor="@color/theme_blue_dark" />
        </android.support.design.widget.TextInputLayout>

        <com.flocktamer.customview.CustomTextView
            android:id="@+id/tv_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:text=""
            android:textSize="@dimen/dimen_16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_5dp">

            <com.flocktamer.customview.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn't get it? "
                android:textColor="@color/theme_blue_dark"
                android:textSize="@dimen/dimen_16sp" />

            <com.flocktamer.customview.CustomTextView
                android:id="@+id/tv_confirm_resendcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                app:html="@string/resend_code" />

            <com.flocktamer.customview.CustomTextView
                android:id="@+id/tv_confirm_renter_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_5dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_16sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:html="@string/reenter_number" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_confirm_phone_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout2"
        android:layout_alignRight="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="73dp"
        android:background="@drawable/master_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="@dimen/dimen_10dp"
            android:drawableRight="@drawable/text_arrow"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </RelativeLayout>
</RelativeLayout>
