<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.flocktamer.fragments.CategoriesFragment">

    <com.flocktamer.customview.CustomTextView
        android:id="@+id/tv_categories_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_15dp"
       android:gravity="center_horizontal"
        android:text=""
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:baselineAligned="false">

        <com.flocktamer.customview.BorderLayout
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:bottomBorderColor="@android:color/darker_gray"
            app:bottomBorderWidth="1dp"
            app:leftBorderColor="@android:color/darker_gray"
            app:leftBorderWidth="1dp"
            app:rightBorderColor="@android:color/darker_gray"
            app:rightBorderWidth="1dp"
            android:gravity="center"
            app:topBorderColor="@android:color/darker_gray"
            app:topBorderWidth="1dp">

            <com.flocktamer.customview.CustomTextView
                android:id="@+id/tv_categories_editor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:focusable="false"
                android:text="@string/editor_choice"
                android:textSize="@dimen/dimen_17sp"
                android:textStyle="bold" />
        </com.flocktamer.customview.BorderLayout>

        <com.flocktamer.customview.BorderLayout
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:bottomBorderColor="@android:color/darker_gray"
            app:bottomBorderWidth="1dp"
            app:rightBorderColor="@android:color/darker_gray"
            app:rightBorderWidth="1dp"
            app:topBorderColor="@android:color/darker_gray"
            android:gravity="center"
            app:topBorderWidth="1dp">

            <com.flocktamer.customview.CustomTextView
                android:id="@+id/tv_categories_i_pick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:focusable="false"

                android:text="@string/i_ll_pick"
                android:textSize="@dimen/dimen_17sp" />
        </com.flocktamer.customview.BorderLayout>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_pick_categories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:layout_weight="1" />

    <com.flocktamer.customview.CustomTextView
        android:id="@+id/tv_company_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topic_continue_bttn"
        android:gravity="center"
        android:text="@string/continue_text"
        android:enabled="false"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:clickable="false"
        android:textSize="@dimen/dimen_18sp" />
</LinearLayout>
